--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,8 +51,8 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
 
     implementation 'de.hdodenhof:circleimageview:3.1.0'
-
-    implementation 'com.github.siyamed:android-shape-imageview:0.9.3@aar'
+//
+//    implementation 'com.github.siyamed:android-shape-imageview:0.9.3@aar'
 
     def nav_version = "2.3.5"
 
@@ -64,12 +64,12 @@ dependencies {
 
     // CHART LIBRARIES
     implementation 'com.github.razerdp:AnimatedPieView:1.3.0'
+    //    implementation 'com.github.JastAir:Android-BackgroundChart:1.0.1-alpha'
 
     // TEST LIBRARIES
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    implementation 'com.github.JastAir:Android-BackgroundChart:1.0.1-alpha'
 
     implementation "com.airbnb.android:lottie:4.0.0"
 //    implementation 'com.github.arimorty:floatingsearchview:2.1.1'
