--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="false"
-        android:theme="@style/Theme.Covid19Vaccine">
+        android:theme="@style/splashScreenTheme">
         <activity
             android:name=".ui.HomeActivity"
             android:exported="true">
