--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,7 @@ dependencies {
 
     // CHART LIBRARIES
     implementation 'com.github.razerdp:AnimatedPieView:1.3.0'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     //    implementation 'com.github.JastAir:Android-BackgroundChart:1.0.1-alpha'
 
     // TEST LIBRARIES
