--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,5 +70,6 @@ dependencies {
 
     implementation "com.airbnb.android:lottie:4.0.0"
 //    implementation 'com.github.arimorty:floatingsearchview:2.1.1'
+    implementation 'com.github.blongho:worldCountryData:1.5.2'
 
 }
