--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,13 +44,13 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.core:core-ktx:1.6.0'
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'androidx.core:core-ktx:1.9.0-alpha01'
+    implementation 'androidx.appcompat:appcompat:1.6.0-alpha01'
+    implementation 'com.google.android.material:material:1.6.0-alpha03'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
 
-    def nav_version = "2.3.5"
+    def nav_version = '2.5.0-alpha03'
 
     //The rest of the dependencies here
 
@@ -68,8 +68,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    implementation "com.airbnb.android:lottie:4.0.0"
-//    implementation 'com.github.arimorty:floatingsearchview:2.1.1'
+    implementation 'com.airbnb.android:lottie:5.0.3'
     implementation 'com.github.blongho:worldCountryData:1.5.2'
 
 }
